solved - ''jumping'' of home gone

--- a/src/Assets/Css/Home.css
+++ b/src/Assets/Css/Home.css
@@ -112,7 +112,7 @@ zoomer {
   background: #edffd355;
   backdrop-filter: blur(5px);
   width: 100%;
-  height: 200px;
+  height: 100%;
   text-shadow: 1px 1px 2px darkgreen, 2px 2px 5px darkgreen;
   z-index: -1;
   padding: 20px 30px;
